Bug 37606 - EDITING, TABLES: Edit > Select All doesn't work on a document beginning with a table
Summary: EDITING, TABLES: Edit > Select All doesn't work on a document beginning with ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0
Keywords:
: 62720 67369 67424 77838 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-25 15:37 UTC by Guilherme
Modified: 2014-04-24 06:23 UTC (History)
17 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple document where you can reproduce the problem (10.43 KB, application/vnd.oasis.opendocument.text)
2011-05-25 15:37 UTC, Guilherme
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guilherme 2011-05-25 15:37:43 UTC
Created attachment 47164 [details]
Simple document where you can reproduce the problem

LibreOffice 3.3.1 on Windows XP 32 bits:

On Writer, create a document and include a table on the first paragraph and some text below it (or use the file attached). Type Ctrl+A (or on the menu: Edit > Select All) and it will only select the table (first the cell, and then the table) and not all the content of the document (table + text).

If you include a paragraph above the table, Select All works fine.
Comment 1 Guilherme 2011-05-26 08:42:49 UTC
could reproduce this error on LO 3.4 RC1
Comment 2 clio 2011-05-27 08:55:53 UTC
I can reproduce this with LibO 3.4 RC2 too (Linux). The same is with OOo 3.3 and OOo-dev300m106.
Comment 3 Rainer Bielefeld Retired 2011-06-10 02:57:40 UTC
RC2 is bit by bit identical with release version, so separate items in the version picker are useless. Changes have been discussed with Michael Meeks.
Comment 4 Rainer Bielefeld Retired 2011-06-12 02:13:07 UTC
Still [Reproducible] with "LibreOffice 3.4.0  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:12)]"

Very old issue, I also see that with OOo3.1.1, OOo 1.1.4. (OOo history starts with 1.0.1)

Cédric:
Please feel free to reassign if it's not your area!
Comment 5 Renato Mendes 2012-01-11 10:46:38 UTC
This issue remains unresolved in LibreOffice 3.5.0 (tested and confirmed with
beta2 prerelease).
Comment 6 Renato Mendes 2012-01-11 10:53:48 UTC
This issue remains unresolved in LibreOffice 3.5.0 (tested and confirmed with
beta2 prerelease).
Comment 7 Chris Peñalver 2012-01-11 16:56:56 UTC
Guilherme and Renato Mendes, please do not toggle the Version. For more on this please see: http://wiki.documentfoundation.org/BugReport_Details#Version

Version -> 3.3.1
Comment 8 rpr 2012-05-22 04:02:24 UTC
This issue remains unresolved in LibreOffice 3.5.3.2.
Comment 9 Roman Eisele 2012-05-23 10:43:01 UTC
Just to complete the OS list (MacOS was missing ;-):

Also REPRODUCIBLE with LibreOffice 3.5.4.1 (Build-ID: 7306755-f4f605c-738527d-1cf4bc1-9930dc8), German langpack installed, on MacOS X 10.6.8 German UI.
Comment 10 dany franck 2012-06-15 04:22:59 UTC
reproductible with 3.6.0 B1
Comment 11 manj_k 2013-03-25 14:44:37 UTC
*** Bug 62720 has been marked as a duplicate of this bug. ***
Comment 12 rpr 2013-07-27 11:12:32 UTC
Added to bug 60270 - (mab4.1) LibreOffice 4.1 most annoying bugs
Comment 13 tommy27 2013-07-27 12:17:05 UTC
you should removed it from 4.1 MAB because it's a wrong category for it
that page is intended for bugs that are present in the 4.1.x branch only and not in previous versions.

since first reproducible version is 3.3.1 it could be candidated to be a 4.0 MAB that's why 3.3 MABs page doesn't exist and the 3.4.x, 3.5.x and 3.6.x branches are over so their respective still valid MABs are going to be moved to the 4.0 MAB page.
Comment 14 rpr 2013-07-27 12:30:52 UTC
Added to Bug 54157 - (mab4.0) LibreOffice 4.0 most annoying bugs
Comment 15 Ivan Timofeev (retired) 2013-07-28 06:14:55 UTC
*** Bug 67424 has been marked as a duplicate of this bug. ***
Comment 16 Ivan Timofeev (retired) 2013-07-28 06:20:19 UTC
*** Bug 67369 has been marked as a duplicate of this bug. ***
Comment 17 Cor Nouws 2013-07-31 08:51:01 UTC
I do not agree that this is marked as MAB.
It always has been this way in Writer: no regression. Also there are good and fine work arounds.
Comment 18 Michael Stahl 2013-08-15 15:38:59 UTC
i'm also not happy with this as MAB, since the effort to fix this would be huge as it's an inherent limitation of Writer's document and table model.

only thing that could be done easily is to have select-all select everything _except_ the table at the start of the document (instead of whatever silly thing it currently does).
Comment 19 rpr 2013-08-15 18:00:10 UTC
Users who have at least intermediate computer skills would expect that the Select All action selects all content of a document they are editing/viewing in a GUI application. That is a standard across wide range of applications.

If it is broken in LibreOffice Writer because some of its developers decided to use certain document model (a defective model I'd say) then AT LEAST the LibreOffice Help should contain a note about this issue.

Currently, the LibreOffice Help says the following in Text Documents > Command and Menu Reference > Menus > Edit:

Select All
Selects the entire content of the current file, frame, or text object.

What does the "text object" means?

I'd suggest expanding this description so that it is in accordance with the actual functionality of this command especially regarding the case when a document begins with a table.

Also, I see that Select All doesn't include inserted frames.
Comment 20 sophie 2013-09-12 15:56:14 UTC
I don't see also why this bug is in the MAB, and there is a very simple workaround, see
https://wiki.documentfoundation.org/Faq/Writer/165
If the help file has to be amended, this is a different issue. Sophie
Comment 21 Michael Meeks 2013-09-13 08:18:20 UTC
As it happens Miklos is working on this bug right now for a Collabora customer :-) It's certainly not a trivial one; but let me CC him.
Comment 22 rpr 2013-09-15 19:44:17 UTC
As a workaround for this issue I inserted a paragraph before the table and formatted the text in the paragraph as hidden. Then tried to use Select All. It selects all text only if the hidden text is visible, which is enabled in Tools > Options > LibreOffice Writer > Formatting Aids > Display of Hidden text. If that option is not enabled the Select All selects only the table, which is strange (another bug?).
Comment 23 Miklos Vajna 2013-09-16 07:45:03 UTC
Taking from Cédric.

rpr: no, that's expected, this is a UI limitation, so if the hidden paragraph is not shown, you have the same problem.
Comment 24 Commit Notification 2013-09-16 10:55:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b11e66ab89c201591d8be8f1ab1af1aba11a821

fdo#37606 SwWrtShell::SelAll(): initial support for doc starting with table



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2013-09-16 15:23:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b6445dba6bb5b2aed3edb4878ecb327446286e9

fdo#37606 SwWrtShell: fix select all when doc starts with table and cursor ...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2013-09-17 14:35:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0fb4adcff534e3841cf6df0e2363fb0797af7022

fdo#37606 SwEditShell::DeleteSel(): handle document starting with a table



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2013-09-19 09:51:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=49505336a629a75f4fb48bbe0c532b402e857ed4

fdo#37606 SwEditShell: fix copying when doc starts with a table ...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2013-09-20 13:57:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a516ac452e33d3f0df2572089041e2555808a5ee

fdo#37606 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 29 Miklos Vajna 2013-09-20 14:44:00 UTC
Fixed on master, -4-1 review:

https://gerrit.libreoffice.org/6012
Comment 30 Jean-Baptiste Faure 2013-09-21 15:45:52 UTC
Hi Miklos,

I tried the copy-paste with the master containing your fix (Build ID: 60aea4b2cadf367736605b09604a0818b7ae571b) on the bugdoc. Selection by ctrl+A and copy work as expected. But is it a side effect or expected if, when pasting in a new empty file, the data are pasted after an empty page?

Best regards. JBF
Comment 31 Miklos Vajna 2013-09-22 13:15:57 UTC
Yes, that's expected. The reason is that the table (in the bugdoc) explicitly specifies what page style to use, this way it's considered to be a page break.

I mean, if I create a test document that is similar to the bugdoc (starts with a table, then a few non-table paragraphs after it, but I don't explicitly set a page style name for the table), then this does not occur.
Comment 32 Jean-Baptiste Faure 2013-09-23 16:20:36 UTC
Indeed, if I uncheck the checkbox "Break" in the Text Flow tab for the format table, the table is pasted on the first page.

Thank you very much.

Best regards. JBF
Comment 33 Jean-Baptiste Faure 2013-09-27 14:20:29 UTC
Hi Miklos,

Small remaining problem: the fix does not work if the table is empty. I do not know if somebody use empty tables, but ... :-)

Best regards. JBF
Comment 34 Miklos Vajna 2013-09-27 15:03:21 UTC
Could we please have a separate bugreport for that? It would be great to track it in a dedicated bug.

Thanks! :-)
Comment 35 rpr 2013-09-27 21:30:28 UTC
I'd say it's just a special case of the same issue reported in this bug.
This means that the bug is not fixed actually and should be reopened.
Comment 36 Michael Meeks 2013-09-27 22:32:33 UTC
rpr - if Miklos would like it as a separate bug, since he's the expert here, and since all bugs are basically specialisations of the "something doesn't work" bug :-) I'll file this as a separate issue. See bug #69894
Comment 37 Arnaud Versini 2013-09-27 22:57:21 UTC
Or the previous one :*) 

https://bugs.freedesktop.org/show_bug.cgi?id=69894
Comment 38 tommy27 2014-04-24 06:23:34 UTC
*** Bug 77838 has been marked as a duplicate of this bug. ***