bnc#825891 fdo#37606 SwWrtShell::SelAll(): fix for doc starting with table

SwWrtShell::SelAll() can now detect if the body text starts with a
table, and if so, it explicitly selects the whole document, not just the
first cell of the starting table.

Also, SwCrsrShell::EndAction() now checks for this "select all and doc
starts with table" situation, and if that's the case, it activates a
special select all mode, so layout can act accordingly.

(cherry picked from commit 3b11e66ab89c201591d8be8f1ab1af1aba11a821)

Conflicts:
	sw/source/core/crsr/crsrsh.cxx
	sw/source/core/layout/trvlfrm.cxx

fdo#37606 SwWrtShell: fix select all when doc starts with table and cursor ...

... is outside that table

(cherry picked from commit 4b6445dba6bb5b2aed3edb4878ecb327446286e9)

fdo#37606 SwEditShell::DeleteSel(): handle document starting with a table

If the whole document is selected and the document starts with a table,
then we used to delete the contents of the document, except the starting
table, which was just cleared. Change this and do what is expected:
remove the table as well, so the document will have a single empty
paragraph only.

(cherry picked from commit 0fb4adcff534e3841cf6df0e2363fb0797af7022)

Conflicts:
	sw/source/core/edit/eddel.cxx

fdo#37606 SwEditShell: fix copying when doc starts with a table ...

... and the whole document was selected

The problem is that the cursor starts at the first cell of the starting
table, but when copying, we want to copy the preceding startnode and
tablenode as well.

(cherry picked from commit 49505336a629a75f4fb48bbe0c532b402e857ed4)

fdo#37606 testcase

(cherry picked from commit f5fa78d75abac3dbe0f9edf9e9106f63ca5dca53)

Conflicts:
	sw/qa/extras/odfimport/odfimport.cxx

Change-Id: I60d34906a90a5143163e516f618648cf7178430e

Conflicts:
	sw/CppunitTest_sw_odfimport.mk
	sw/inc/viewsh.hxx
	sw/qa/extras/odfimport/odfimport.cxx
	sw/source/core/crsr/crsrsh.cxx
	sw/source/core/view/vnew.cxx