sw/CppunitTest_sw_subsequent_odfimport.mk
@@ -38,6 +38,7 @@ $(eval $(call gb_CppunitTest_use_libraries,sw_subsequent_odfimport, \
     cppu \
     cppuhelper \
     sal \
+	svt \
 	sw \
     test \
     unotest \
@@ -53,6 +54,7 @@ $(eval $(call gb_CppunitTest_use_externals,sw_subsequent_odfimport,\
 $(eval $(call gb_CppunitTest_set_include,sw_subsequent_odfimport,\
     -I$(SRCDIR)/sw/inc \
     -I$(SRCDIR)/sw/source/core/inc \
+    -I$(SRCDIR)/sw/source/ui/inc \
 	-I$(SRCDIR)/sw/qa/extras/inc \
     $$(INCLUDE) \
 ))
@@ -87,6 +89,9 @@ $(eval $(call gb_CppunitTest_use_components,sw_subsequent_odfimport,\
     unotools/util/utl \
     unoxml/source/service/unoxml \
     uui/util/uui \
+	$(if $(filter-out MACOSX WNT,$(OS)), \
+		vcl/vcl.unx \
+	) \
 	$(if $(filter DESKTOP,$(BUILD_TYPE)),xmlhelp/util/ucpchelp1) \
 ))
 
